# ai_newsletter_fall2025

./: .env  .env-example  .gitignore  ARCHITECTURE.md  CACHING_FEATURES.md  PROJECT_OVERVIEW.md  README.md  SETUP_REAL_NEWS.md  TROUBLESHOOTING.md  demo.py  main.py  mkdocs.yml  pyproject.toml  setup_api_keys.py  start.sh  start_clean.sh
CURSOR_RULES_FOR_WORKSHOP/.cursor/rules/: file-header-rule.mdc
cache/: newsletter_2025-09-29.json  newsletter_2025-09-30.json
docs/: index.md
docs/notebooks/: api-demo.ipynb
docs/notebooks/.ipynb_checkpoints/: api-demo-checkpoint.ipynb
src/ReactNewslettr/: __init__.py  config.py
src/ReactNewslettr/api/: __init__.py  main.py  routes.py
src/ReactNewslettr/models/: __init__.py  api_models.py  news_models.py
src/ReactNewslettr/services/: __init__.py  ai_service.py  cache_service.py  news_service.py  newsletter_service.py
src/ReactNewslettr/templates/: 404.html  500.html  article.html  index.html
tests/: __init__.py  test_models.py
